sandc/test/fixtures/astRegression/shouldFail/productions/switchPseudex/EmptySwitchBody.sand
pub class EmptySwitchBody {
    foo() {
        let a = switch val {

        };
    }
}